Don't show network config UI when networkingPrivate.startConenct fails

If networkingPrivate.startConnect fails the API should not attempt showing
network configuration dialog (as it currently does for certain errors, e.g.
when the network passphrase is wrong). The API should let clients handle
the error themselves. Plus it makes expectations about network connection
state after startConnect returns clearer.

The behaviour is kept only for requests from web ui context, as network
config UI on Chrome OS still depends on this behavior.

BUG=703839

Review-Url: https://codereview.chromium.org/2814023002
Cr-Commit-Position: refs/heads/master@{#464123}

Former-commit-id: 70efae18e35db3dd25e00c2dfc205b7a3b72e76e