extensions/browser/api/networking_private/networking_private_chromeos.cc
@@ -536,9 +536,7 @@ void NetworkingPrivateChromeOS::StartConnect(
   const bool check_error_state = false;
   NetworkHandler::Get()->network_connection_handler()->ConnectToNetwork(
       service_path, success_callback,
-      base::Bind(&NetworkingPrivateChromeOS::ConnectFailureCallback,
-                 weak_ptr_factory_.GetWeakPtr(), guid, success_callback,
-                 failure_callback),
+      base::Bind(&NetworkHandlerFailureCallback, failure_callback),
       check_error_state);
 }
 
@@ -882,22 +880,6 @@ void NetworkingPrivateChromeOS::SetManagedActiveProxyValues(
   }
 
   VLOG(2) << " NEW PROXY: " << *proxy_settings;
-}
-
-void NetworkingPrivateChromeOS::ConnectFailureCallback(
-    const std::string& guid,
-    const VoidCallback& success_callback,
-    const FailureCallback& failure_callback,
-    const std::string& error_name,
-    std::unique_ptr<base::DictionaryValue> error_data) {
-  // TODO(stevenjb): Temporary workaround to show the configuration UI.
-  // Eventually the caller (e.g. Settings) should handle any failures and
-  // show its own configuration UI. crbug.com/380937.
-  if (ui_delegate()->HandleConnectFailed(guid, error_name)) {
-    success_callback.Run();
-    return;
-  }
-  failure_callback.Run(error_name);
 }
 
 }  // namespace extensions
